# Columnar-Analytics-Engine

./: .gitignore  README.md
columnar-analytics-engine/: .clang-format  .gitignore  CMakeLists.txt
columnar-analytics-engine/docs/: FORMAT.md
columnar-analytics-engine/examples/: basic_usage.cpp
columnar-analytics-engine/include/: encoding.h  execution.h  format.h
columnar-analytics-engine/src/: cli.cpp  cli_old.cpp  encoding.cpp  format.cpp
columnar-analytics-engine/tests/: test_corruption.cpp  test_encoding.cpp  test_execution.cpp  test_format.cpp
